@@ -1,3 +1,8 @@
+Sat Oct 19 19:55:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* encoding.c (rb_locale_encindex): defer initialization of win32 code
+	  page table until encoding db loaded.
+
 Sat Oct 19 08:25:05 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c: fix rb_objspace_t.
